--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,20 @@
 body {
-  font-family: sans-serif;
+  font-family: Helvetica sans-serif;
   font-size: 112.5%;
   color: #333;
   background-color: #fefefe;
   max-width: 1080px;
-  margin: 0 auto;
+  line-height: 1.5;;
+}
+article {
+  font-size: 1.5rem;;
 }
 h1 {
+  font-size: 2rem;;
+  font-weight: 400;
   color: blue;
 }
+p {
+  font-style: italic;
+}
+
