--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Helvetica sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 112.5%;
   color: #333;
   background-color: #fefefe;
